# dnd-explorer

./: .dockerignore  .env  .env.local.template  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.prod.yml  docker-compose.yml  next.config.mjs  package-lock.json  package.json  requirements.txt
api/: main.py
api/app/config/: constants.py  settings.py
api/app/db/: __init__.py
api/app/enums/: __init__.py
api/app/models/: __init__.py  local.py
api/app/routers/: spells.py
api/utils/: fileloader.py
backend/: .env.local  .env.local.template  .gitignore  build.py  pyproject.toml  pytest.ini
backend/app/: main.py
backend/app/config/: dependencies.py  settings.py
backend/app/db/: __init__.py
backend/app/db/helper/: store.py
backend/app/enums/: __init__.py
backend/app/models/: __init__.py  local.py
backend/app/routers/: spells.py
backend/utils/: fileloader.py
frontend/: bun.lockb  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/: .env.local.template
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: BackToTopButton.tsx  Hero.tsx  Pagination.tsx  SearchBox.tsx  Select.tsx
frontend/src/data/: HomepageCategories.ts  categories.ts  details.ts
frontend/src/hooks/: useFetchData.tsx  useFetchImgs.tsx  (+1 more)
src/app/: globals.css  layout.tsx
src/components/: Card.tsx  CardList.tsx  Hero.tsx  Pagination.tsx  Select.tsx
src/hooks/: useFetchImgs.tsx
src/layouts/: Navbar.tsx  index.tsx
src/lib/: constants.ts  retrieve.ts
src/pages/: Homepage.tsx
(+41 files in other folders)
