[tool.poetry]
name = "app"
version = "0.1.0"
description = "A FastAPI backend for processing API data and passing it to the frontend."
authors = ["Ryan Partridge <rpartridge101@yahoo.co.uk>"]
readme = "README.md"

[tool.poetry.scripts]
run = "build:start"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.1" }
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.30"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
hypothesis = "^6.103.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
